Fixed disappearing director birthdates, fixed alignment of directors birthdate

--- a/App/PluginWeb/EzBob.Web/Content/css/attardi.labels.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/attardi.labels.css
@@ -52,3 +52,7 @@
 .ezDateTime .attardi-input {
     width: 26.85%;
 }
+
+.director-birth-date {
+    width: 24% !important;
+}
